# langchain_example

./: .gitignore  chat.py  ingest.py  main.py  models.py  pyproject.toml
db/chroma_db/: chroma.sqlite3
